Version 2.7
~~~~~~~~~~~
* Fix problem with "Allow DifxParameter message to specify new stop time" that caused premature termination of the job.  Bug introduced in SVN commit 7910 on July 20, 2017
  - Put patch into the 2.6 branch.
* Support IPP 2019 series
* Fix native mk5 issue where buffer locks would be ignored on a long-ish timeout that can happen on start-up.
  - Put patch into the 2.6 branch.
* * Fix bug affecting data weights when nBufferedFFTs > 1 and datastreams weight < 1
  - Put patch into 2.6 branch
* Added support for CODIF format
* Correctly set CODIF format name, bug fix int framespersecond
* Caught case where complex data is set to use zeroth order fringe rotation (which isn't implemented)
* startdifx, genmachines: increase multicast receive buffer size to 8000
* python3: joblist, jobdisks, jobstatus, startdifx, stopmpifxcorr
* move stopmpifxcorr from scripts/ to utils/ ; get rid of scripts dir
* can compile again without mark6 libraries
* Remove experimental support for shared memory datastream -- it never worked
* startdifx: add --wait option to wait until job start time before beginning
* Post DiFX-2.6

Version 2.6
~~~~~~~~~~~
* Some improvements to VDIF file reading for very gappy data
* Some improvements to VDIF for frame sizes greatly differing from 5000 bytes
* Some improvements in opening input files; reattempts on NFS-typical errors of "EAGAIN Resource temporarily unavailable"
* Reduce NFS load: .input file is read only by FxManager node and its content is shared with other nodes via MPI Broadcast
* Remove array that was mooted when per-band weights were introduced
* Allow DifxParameter message to specify new stop time, then cleanly shut down at that time.
* DifxParameters with <to></to> blocks are compared against the job name.
* startdifx: end difxlog process after every job when running with joblist
* genmachines: fixed support for multiple input files